# cuda-practice

./: .gitignore  CMakeLists.txt  README.md  clean.sh  cmake.sh  example-app.cpp  make.sh
src/: common.hpp
src/algorithms/: reduction.hpp
src/algorithms/reduction/: exapmle_pytorch.cu  sakamoto.cu
